19380
Why?

{code}
object Foo { def foo[A]: (A*) => A = as => as.head }
{code}

ok:
{code}
scala> Foo.foo(1,2,3)
res1: Int = 1
{code}

not ok:
{code}
scala> import Foo.foo; foo(1,2,3)
<console>:10: error: too many arguments for method apply: (v1: Seq[A])A in trait Function1
        foo(1,2,3)
           ^
{code}
